Flowmini/flowmini_v23_token_tree_bridge/examples/pass/fibonacci_structured.flow
program fibonacci_structured

main {
    n    : int(stdin.int())
    zero : int(0)
    one  : int(1)
    a    : int(0)
    b    : int(1)
    i    : int(0)
    tmp  : int(0)

    while i < n {
        a + b -> tmp
        b -> a
        tmp -> b
        i + one -> i
    }

    print a
}
