Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_if_empty.flow
program bad_if_empty

main {
    n    : int(stdin.int())
    zero : int(0)

    if n > zero {
    }
}
